# eagerwords.com

./: .gitignore  BACKLOG.md  NOTICES.txt  README.md  branch.sh.azadbolour  branch.sh.template  clone-tag.sh  prepare.sh  remove-container.sh  reset-git-tag.sh  set-git-tag.sh  todo  update-copyright.sh
benchmark/: .gitignore  README.md  benchmark-config.yml  pom.xml  run.sh  small-config.yml  test-config.yml
dict/: .gitignore  README.md  moby-english.txt  more-words  two-letter-words  unzip-masked-words.sh
docs/: index.html
eagerwords-web/: .gitignore  README.md  bucket-policy.json.template  build.sh  deploy2-s3.sh  dotenv.template  gen-jsdoc.sh  global-installs.sh  package-lock.json  package.json  run-integration-tests.sh  run.sh  set-bucket-policy.sh  todo
eagerwords-web/doc/: DESIGN.md  bootstrap.notes  cloudfront.notes  git.notes  okta.notes  passwordless.notes  promises.md  (+2 more)
haskell-server/: .gitignore  BACKLOG.md  CONVENTIONS.md  README.md  browsedocs.sh  build-library.sh  build.sh  clear-postgres-db.sh  clear-sqlite-db.sh  config.yml.template  curl-start-game.sh  dot.spacemacs.save  eagerwords.cabal  gendocs.sh  ghc.notes  gists  haskell-notes.md  install.sh  migrate-database.sh  mkdistribution.sh  nix.notes  obsolete.config.yml  patterns.md  populate-seed-data.sh  preprocess-masked-words.sh  profile-bld-again.sh  profile-bld.sh  profile-run-executable.sh  profile-run.sh  run-all-suites.sh  run-sample.sh  run-single-test.sh  run-test-suite.sh  run.sh  stack.yaml  start-game.json  test-library.sh  test.sh  todo  update-ui-bundle.obsolete.sh  (+1 more)
haskell-server/app/: DatabaseMigrator.hs  DistributionTrial.hs  Main.hs  SampleClient.hs  SeedDataPopulator.hs  Trial.hs
haskell-server/data/: tiny-words.txt
haskell-server/dict/: en-masked-words.txt  en-words.txt
haskell-server/docker/: Dockerfile.eagerwords-haskell-packager  Dockerfile.eagerwords-haskell-server  build-packager-image.sh  build-server-image.sh  run-packager-container.sh  run-server-container.sh
haskell-server/docker.old/: Dockerfile.boardgame-haskell  Dockerfile.boardgame-haskell-base  Dockerfile.boardgame-haskell-packager  README.md  build-boardgame-haskell-docker.sh  build-boardgame-haskell-packager-docker.sh  cleanup-images.sh  dependends.sh  find-dependents.sh  run-docker-boardgame-haskell.sh
haskell-server/docker/boardgame/: Dockerfile.boardgame-haskell-packager  Dockerfile.boardgame-haskell-server  README  build-boardgame-haskell-server.sh  run-docker-packager.sh  run-docker-server.sh
haskell-server/docker/boardgame/experimental/: nohup.out
haskell-server/src/Bolour/Language/Domain/: DictionaryCache.hs  DictionaryIO.hs  WordDictionary.hs
haskell-server/src/Bolour/Language/Service/: MaskedWordsPreprocessor.hs
haskell-server/src/Bolour/Language/Util/: WordUtil.hs
haskell-server/src/Bolour/Plane/Domain/: Axis.hs  BlackWhiteGrid.hs  BlackWhitePoint.hs  Grid.hs  LineSegment.hs  Point.hs
haskell-server/src/Bolour/Util/: BlackWhite.hs  Cache.hs  Core.hs  DbConfig.hs  DeployEnv.hs  Empty.hs  EnvUtil.hs  FileUtil.hs  FrequencyDistribution.hs  HttpUtil.hs  Middleware.hs  MiscUtil.hs  PersistRunner.hs  TimeUtil.hs  VersionStamped.hs
haskell-server/src/EagerWords/Client/: GameClient.hs
haskell-server/src/EagerWords/Common/: GameApi.hs  README.md
haskell-server/src/EagerWords/Common/Domain/: DeviceType.hs  GameBasicInfo.hs  GameMiniState.hs  GameParams.hs  GameSettings.hs  GameSummary.hs  InitPieces.hs  Piece.hs  PiecePoint.hs  PieceProviderType.hs  PlayPiece.hs  PlayerType.hs  StopInfo.hs  UserDto.hs
haskell-server/src/EagerWords/Common/Message/: CommitPlayResponse.hs  GetGamesResponse.hs  GetUserGamesRequest.hs  HandShakeResponse.hs  MachinePlayResponse.hs  PlayerDto.hs  ResumeGameResponse.hs  StartGameRequest.hs  StartGameResponse.hs  SwapPieceResponse.hs
haskell-server/src/EagerWords/Server/: README.md
haskell-server/src/EagerWords/Server/Domain/: Board.hs  CrossWordFinder.hs  Game.hs  GameBase.hs  GameCache.hs  GameConfig.hs  GameEnv.hs  GameError.hs  PieceProvider.hs  Play.hs  PlayDetails.hs  PlayInfo.hs  Scorer.hs  ServerConfig.hs  ServerVersion.hs  Strip.hs  StripMatcher.hs  Tray.hs  User.hs
haskell-server/src/EagerWords/Server/Service/: GameData.hs  GameJsonPersister.hs  GameJsonSqlPersister.hs  GameLetterDistribution.hs  GamePersister.hs  GamePersisterJsonBridge.hs  GameService.hs  GameTransformerStack.hs  TypeDefs.hs
haskell-server/src/EagerWords/Server/Web/: Converters.hs  GameEndPoint.hs
haskell-server/test/: Spec.hs
haskell-server/test-data/: file1.txt  file2.txt  file3.txt  sqlite-config.yml
haskell-server/test/Bolour/Language/Domain/: WordDictionarySpec.hs
haskell-server/test/Bolour/Plane/Domain/: BlackWhiteGridSpec.hs
haskell-server/test/Bolour/Util/: DataFileSpec.hs  FrequencyDistributionSpec.hs  SpecUtil.hs
haskell-server/test/EagerWords/Common/Domain/: GridSpec.hs
haskell-server/test/EagerWords/Integration/: GameClientSpec.hs
haskell-server/test/EagerWords/Server/Domain/: BoardSpec.hs  CommonSpec.hs  CrossWordFinderSpec.hs  HopelessBlanksSpec.hs  HopelessBlanksSpec2.hs  ScorerSpec.hs  ServerParametersSpec.hs  StripMatcherSpec.hs  StripMatcherSpec2.hs  StripMatcherSpec3.hs
haskell-server/test/EagerWords/Server/Service/: BaseServiceFixtures.hs  GameServiceSpec.hs  NegativeGameServiceSpec.hs  PieceProviderSpec.hs  ServiceTestFixtures.hs
haskell-server/test/EagerWords/Server/Web/: ConvertersSpec.hs  GameEndPointSpec.hs  JsonSpec.hs  WebTestFixtures.hs
haskell-server/test/EagerWords/Util/: TestUtil.hs
haskell-server/test/InFocus/: Main.hs
haskell-server/trial/: AsyncSample.hs  CatchTrial.hs  ExistentialTrial.hs  IORefSample.hs  MvarSample.hs  SequenceTrial.hs  SqliteTrial.hs  TempTrial.hs  UUIDTrial.hs
react-client/: README.md
scala-server/: .gitignore  .sbtopts  README.md  build.sbt  build.sh  create-postgresdb.sh  curl-test.sh  env.dev.sh  env.template.sh  get-dynamic-params.sh  install.sh  local.exports.sh.template  mkdistribution.sh  preprocess-masked-words.sh  prod.env.template.sh  run-server.sh  run.sh  testmail.sh  testonly.sh
(+571 files in other folders)
