name:           eagerwords
version:        0.4.0
build-type:     Simple
cabal-version:  >= 1.10
data-files:     data/*.txt

library
  hs-source-dirs:
      src
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , vector
    , random
    , servant
    , servant-server
    , servant-client
    , servant-errors >= 0.1.3.1
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , wai-cors
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , uuid
    , logging-effect
    , time
    , enclosed-exceptions
    , deepseq
    , yaml
    , split
    , hashable
    , unordered-containers
  exposed-modules:
      -- TODO. Separate out util, language, plane, and server into different packages.
      Bolour.Util.Core
      Bolour.Util.Cache
      Bolour.Util.DbConfig
      Bolour.Util.PersistRunner
      Bolour.Util.EnvUtil
      Bolour.Util.MiscUtil
      Bolour.Util.Middleware
      Bolour.Util.DeployEnv
      Bolour.Util.HttpUtil
      Bolour.Util.FileUtil
      Bolour.Util.Empty
      Bolour.Util.BlackWhite
      Bolour.Util.VersionStamped
      Bolour.Util.TimeUtil
      Bolour.Util.FrequencyDistribution
      Bolour.Language.Util.WordUtil
      Bolour.Language.Domain.WordDictionary
      Bolour.Language.Domain.DictionaryIO
      Bolour.Language.Domain.DictionaryCache
      Bolour.Plane.Domain.Point
      Bolour.Plane.Domain.Axis
      Bolour.Plane.Domain.Grid
      Bolour.Plane.Domain.LineSegment
      Bolour.Plane.Domain.BlackWhitePoint
      Bolour.Plane.Domain.BlackWhiteGrid
      EagerWords.Common.GameApi
      EagerWords.Server.Domain.ServerConfig
      EagerWords.Common.Domain.UserDto
      EagerWords.Common.Domain.Piece
      EagerWords.Common.Domain.PieceProviderType
      EagerWords.Common.Domain.GameParams
      EagerWords.Common.Domain.DeviceType
      EagerWords.Common.Domain.PiecePoint
      EagerWords.Common.Domain.InitPieces
      EagerWords.Common.Domain.GameBasicInfo
      EagerWords.Common.Domain.PlayPiece
      EagerWords.Common.Domain.StopInfo
      EagerWords.Common.Domain.GameMiniState
      EagerWords.Common.Domain.PlayerType
      EagerWords.Common.Domain.GameSummary
      EagerWords.Common.Domain.GameSettings
      EagerWords.Common.Message.HandShakeResponse
      EagerWords.Common.Message.StartGameRequest
      EagerWords.Common.Message.StartGameResponse
      EagerWords.Common.Message.ResumeGameResponse
      EagerWords.Common.Message.CommitPlayResponse
      EagerWords.Common.Message.MachinePlayResponse
      EagerWords.Common.Message.SwapPieceResponse
      EagerWords.Common.Message.GetUserGamesRequest
      EagerWords.Common.Message.GetGamesResponse
      EagerWords.Server.Domain.PieceProvider
      EagerWords.Server.Domain.Board
      EagerWords.Server.Domain.GameError
      EagerWords.Server.Domain.Game
      EagerWords.Server.Domain.GameBase
      EagerWords.Server.Domain.Play
      EagerWords.Server.Domain.Strip
      EagerWords.Server.Domain.User
      EagerWords.Server.Domain.Tray
      EagerWords.Server.Domain.PlayInfo
      EagerWords.Server.Domain.PlayDetails
      EagerWords.Server.Domain.StripMatcher
      EagerWords.Server.Domain.GameCache
      EagerWords.Server.Domain.GameEnv
      EagerWords.Server.Domain.ServerVersion
      EagerWords.Server.Domain.CrossWordFinder
      EagerWords.Server.Domain.Scorer
      EagerWords.Server.Service.TypeDefs
      EagerWords.Server.Service.GameTransformerStack
      EagerWords.Server.Service.GameService
      EagerWords.Server.Service.GameLetterDistribution
      EagerWords.Server.Service.GameData
      EagerWords.Server.Service.GamePersister
      EagerWords.Server.Service.GameJsonPersister
      EagerWords.Server.Service.GamePersisterJsonBridge
      EagerWords.Server.Service.GameJsonSqlPersister
      EagerWords.Server.Web.GameEndPoint
      EagerWords.Server.Web.Converters
      EagerWords.Client.GameClient
  other-modules:
      Paths_eagerwords
  default-language: Haskell2010

-- Do not add main eagerwords project modules to the other-modules list!
-- You will get a "can't find source" error.
-- Those modules come from the eagerwords library, which is a test dependency.

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , servant
    , servant-server
    , servant-client
    , servant-errors >= 0.1.3.1
    , transformers
    , resourcet
    , aeson
    , wai
    , wai-extra
    , warp
    , persistent
    , persistent-template
    , persistent-sqlite
    , persistent-postgresql
    , text
    , string-conversions
    , monad-logger
    , monad-control
    , mtl
    , bytestring
    , here
    , safe
    , esqueleto
    , http-client
    , http-types
    , network
    , case-insensitive
    , hspec
    , eagerwords
    , servant-client
    , warp >= 3.2.4
    , http-client
    , http-types
    , logging-effect >= 1.1
    , containers
    , time
  other-modules:
      Bolour.Language.Domain.WordDictionarySpec
      Bolour.Plane.Domain.BlackWhiteGridSpec
      Bolour.Util.DataFileSpec
      Bolour.Util.FrequencyDistributionSpec
      Bolour.Util.SpecUtil
      EagerWords.Util.TestUtil
      EagerWords.Integration.GameClientSpec
      EagerWords.Common.Domain.GridSpec
      EagerWords.Server.Domain.BoardSpec
      EagerWords.Server.Domain.CommonSpec
      EagerWords.Server.Domain.StripMatcherSpec
      EagerWords.Server.Domain.StripMatcherSpec2
      EagerWords.Server.Domain.ServerParametersSpec
      EagerWords.Server.Domain.CrossWordFinderSpec
      EagerWords.Server.Domain.ScorerSpec
      EagerWords.Server.Domain.HopelessBlanksSpec
      EagerWords.Server.Domain.HopelessBlanksSpec2
      EagerWords.Server.Service.BaseServiceFixtures
      EagerWords.Server.Service.ServiceTestFixtures
      EagerWords.Server.Service.GameServiceSpec
      EagerWords.Server.Service.NegativeGameServiceSpec
      EagerWords.Server.Service.PieceProviderSpec
      EagerWords.Server.Web.JsonSpec
      EagerWords.Server.Web.GameEndPointSpec
      EagerWords.Server.Web.ConvertersSpec
      EagerWords.Server.Web.WebTestFixtures
  default-language: Haskell2010

test-suite infocus
  type: exitcode-stdio-1.0
  main-is: InFocus/Main.hs
  hs-source-dirs:
      test
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , hspec
    , eagerwords
    , transformers, mtl
    , servant
    , servant-server
    , servant-client
    , http-client
    , aeson
    , logging-effect >= 1.1
    , containers
    , bytestring
    , time
  other-modules:
      EagerWords.Server.Domain.StripMatcherSpec3
      Bolour.Language.Domain.WordDictionarySpec
      Bolour.Util.SpecUtil
      EagerWords.Util.TestUtil
      EagerWords.Server.Web.WebTestFixtures
      EagerWords.Server.Domain.StripMatcherSpec
      EagerWords.Server.Service.GameServiceSpec
      EagerWords.Server.Domain.ServerParametersSpec
      EagerWords.Server.Domain.CrossWordFinderSpec
      EagerWords.Server.Domain.HopelessBlanksSpec2
      EagerWords.Server.Service.BaseServiceFixtures
      EagerWords.Server.Service.ServiceTestFixtures
  default-language: Haskell2010

-- END LIBRARY
-- START EXECUTABLES.

executable eagerwords-database-migrator
  main-is: app/DatabaseMigrator.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , transformers
    , eagerwords
  other-modules:
      Paths_eagerwords
  default-language: Haskell2010

executable masked-words-preprocessor
  main-is: src/Bolour/Language/Service/MaskedWordsPreprocessor.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , eagerwords
  default-language: Haskell2010

executable eagerwords-seed-data-populator
  main-is: app/SeedDataPopulator.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , transformers
    , eagerwords
  other-modules:
      Paths_eagerwords
  default-language: Haskell2010

executable eagerwords-sample-client
  main-is: app/SampleClient.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , eagerwords
    , servant-client
    , mtl
    , aeson
    , wai-cors
    , http-client
  default-language: Haskell2010

executable eagerwords-server
  main-is: app/Main.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , wai
    , wai-cors
    , warp
    , servant
    , servant-server
    , servant-errors >= 0.1.3.1
    , here
    , http-types
    , eagerwords
    , containers
    , mtl
  default-language: Haskell2010

executable trial
  main-is: trial/TempTrial.hs
  ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
  build-depends:
      base
    , containers
    , aeson
    , bytestring
    , text
    , transformers
    , unordered-containers
    , eagerwords

  default-language: Haskell2010

